# patina

./: .gitignore  CLAUDE.local.md  CONTRIBUTING.md  Cargo.lock.license  Cargo.toml  README.md
docs/: VISION.md
docs/slop-001/: SPEC.md
src/: cli.rs  engine.rs  main.rs  scanner.rs  tokens.rs  types.rs
src/parsers/: javascript.rs  mod.rs
src/reporters/: json.rs  mod.rs  terminal.rs
src/rules/: mod.rs
src/rules/slop/: commented_out_code.rs  filler_hedge.rs  mod.rs  reasoning_artifact.rs  redundant_comment.rs  self_narrating.rs
tests/: integration.rs
tests/fixtures/clean/: well_written.js
tests/fixtures/slop/: commented_out_code.js  filler_hedge.js  reasoning_artifacts.js  redundant_comments.js  self_narrating.js
tests/integration/: scan_test.rs
