[package]
name = "patina"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
clap = { version = "4.5.58", features = ["derive"] }
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tree-sitter = "0.26.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
